@@ -20,6 +20,9 @@ trait SlickListBuilder {
     $skin_header[] = ['data' => t('Skin'), 'class' => ['ctools-export-ui-skin']];
     array_splice($headers, 3, 0, $skin_header);
 
+    $collection_header[] = ['data' => t('Collection'), 'class' => ['ctools-export-ui-collection']];
+    array_splice($headers, 4, 0, $collection_header);
+
     return $headers;
   }
 
@@ -53,6 +56,12 @@ trait SlickListBuilder {
       'style' => "white-space: normal; word-wrap: break-word; max-width: 320px;",
     ];
     array_splice($this->rows[$name]['data'], 3, 0, $skin_row);
+
+    $collection_row[] = [
+      'data' => $entity->collection ?: t('- All -'),
+      'class' => ['ctools-export-ui-collection'],
+    ];
+    array_splice($this->rows[$name]['data'], 4, 0, $collection_row);
   }
 
   /**
@@ -75,7 +84,7 @@ trait SlickListBuilder {
     parent::list_form($form, $form_state);
 
     $form['slick description']['#prefix'] = '<div class="ctools-export-ui-row ctools-export-ui-slick-description clearfix">';
-    $form['slick description']['#markup'] = t("<p>Manage the Slick optionsets. Optionsets are Config Entities.</p><p>By default, when this module is enabled, a single optionset is created from configuration. Install Slick example module to speed up by cloning them. Use the Operations column to edit, clone and delete optionsets.<br /><strong class='error'>Important!</strong> Avoid overriding Default optionset as it is meant for Default -- checking and cleaning. Use Clone, or Add, instead. If you did, please clone it and revert, otherwise messes are yours.<br />Slick doesn't need Slick UI to run. It is always safe to uninstall (not only disable) Slick UI once done with optionsets, either stored at codes, or database.</p>");
+    $form['slick description']['#markup'] = t("<p>Manage the Slick optionsets. Optionsets are Config Entities.</p><p>By default, when this module is enabled, a single optionset is created from configuration. Install Slick example module to speed up by cloning them. Use the Operations column to edit, clone and delete optionsets.<br /><strong class='error'>Important!</strong> Avoid overriding Default optionset as it is meant for Default -- checking and cleaning. Use Clone, or Add, instead. If you did, please clone it and revert, otherwise messes are yours.<br />Slick doesn't need Slick UI to run. It is always safe to uninstall (not only disable) Slick UI once done with optionsets, either stored in codes, or database.</p>");
     $form['slick description']['#suffix'] = '</div>';
   }
 
